# metadata-extractor

./: .dockerignore  .gitignore  .gitlab-ci.yml  .snyk  Dockerfile  Dockerfile_base_image  MANIFEST.in  README.md  app.py  bamboo_build_push.sh  bitbucket-pipelines.yml  build_push_docker.sh  build_python_tasks.sh  common.sh  conda-requirements.sh  create-artifact.py  create_deploy_release.py  create_deploy_release_package.py  deploy_lambda_as_docker.py  entry_script.sh  env.sh.example  environment.yaml  environment.yml  handler.py  lambda_Dockerfile  lambda_aws-base_Dockerfile  lambda_requirements.txt  main.tf  mdx_lambda_handler.py  output.tf  package-lock.json  package.json  push_mdx.sh  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_lambda.txt  setup.cfg  setup.py  terraform.tfvars  (+2 more)
lambda_tf/: main.tf  variables.tf
mdx/: app.py  handler.py  main.py
mdx_base/: Dockerfile  requirements.txt
process_mdx/: extract_metadata.py  helpers.py  lambda_handler.py  main.py  mdx_lambda_handler.py  switcher.json  switchers.json
temp/: __init__.py
test/: aces1am.json  aces1cont.json  aces1emf.json  aces1time.json  apr3cpexaw.json  apuimpacts.json  avapsimpacts.json  cmimpacts.json  cosmirimpacts.json  dc8ammr.json  dc8lase.json  er2mir.json  exradepoch.json  exradimpacts.json  fltrepepoch.json  glmgoesL3.json  goesimpacts.json  goesrglmgrid.json  goesrpltavirisng.json  gpmecfd12pc3vp.json  gpmikalpvex.json  gpmjwlpvex.json  gpmkdvn2ifld.json  gpmkorlpvex.json  gpmodmlpvex.json  gpmpipicepop.json  gpmsatpaifld.json  gpmseafluxicepop.json  gpmxetc3vp.json  hamsrcpexaw.json  hamsrepoch.json  hiwrapimpacts.json  hs3shis.json  isslis_v2_fin.json  isslisg_v1_fin.json  isslisg_v2_fin.json  isslisg_v2_nrt.json  kboximpacts.json  kbufimpacts.json  (+207 more)
(+992 files in other folders)
