[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metadata-extractor"
version = "1.0"
description = "MDX: extract temporal and spatial metadata and generate UMM-G granule files for GHRC publishing."
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "GHRC DAAC" }
]

maintainers = [
  { name = "Charles Collins", email = "charles.b.collins@uah.edu" },
  { name = "Eddie Campos", email = "ebc0007@uah.edu" },
  { name = "Lucy Wang", email = "wangl1@uah.edu" }
]

dependencies = [
  "arm-pyart @ git+https://github.com/ARM-DOE/pyart.git#egg=arm-pyart",
  "pyhdf==0.11.3",
  "numpy==1.26.4",
  "cumulus-process==1.1.0",
  "xlrd==1.2.0",
  "h5py==3.8.0",
  "pygrib==2.1.4",
  "ijson==3.2.3",
  "boto3",
  "awslambdaric",
]

[project.optional-dependencies]
test = [
  "pytest==6.2.4",
  "coverage==4.3.4",
  "nose==1.3.7",
  "nose-exclude==0.5.0",
  "nose-testconfig==0.10",
  "nosexcover==1.0.11",
  "ipython"
]

# Console script entry point pointing to the MDX CLI
[project.scripts]
process-mdx = "mdx.main:MDX.cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
mdx = [
  "granule_metadata_extractor/src/helpers/*.json", 
  "granule_metadata_extractor/src/helpers/*.zip", 
  "granule_metadata_extractor/src/helpers/creators/*dbmeta_redone", 
  "granule_metadata_extractor/src/helpers/creators/*renaming_script",
  "test/*.json",
  "test/fixtures/*",
]

[tool.pytest.ini_options]
addopts = [
    "--junitxml=./mdx/test_results/test_metadata_extractor.xml"
]
# This will need to be changed to pythonpath in newer versions of pytest
python_paths = [
    "."
]